<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context="com.supermandelivery.fragments.RatecardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.supermandelivery.Fonts.TextViewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/standard_rate"
                android:textColor="@color/darkBlue"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/border"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <com.supermandelivery.Fonts.TextViewBold
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/first_5km"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <com.supermandelivery.Fonts.TextViewBold
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/rs50"
                        android:textColor="@color/darkBlue" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_lighter"
                    android:padding="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <com.supermandelivery.Fonts.TextViewBold
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/after_5km"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <com.supermandelivery.Fonts.TextViewBold
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/rs10"
                        android:textColor="@color/darkBlue" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/extra_charges"
                android:textColor="@color/darkBlue"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/border"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp">

                    <com.supermandelivery.Fonts.TextViewBold
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/extra_waiting_time"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <com.supermandelivery.Fonts.TextViewBold
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/rs30"
                        android:textColor="@color/darkBlue" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <com.supermandelivery.Fonts.TextViewNormal
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:text="@string/free_first_10min"
                        android:textColor="@android:color/black" />

                    <com.supermandelivery.Fonts.TextViewNormal
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/every_20min"
                        android:textColor="@color/darkBlue" />
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_lighter"
                    android:padding="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <com.supermandelivery.Fonts.TextViewBold
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:text="@string/extra_weight"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <com.supermandelivery.Fonts.TextViewBold
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/rs50"
                        android:textColor="@color/darkBlue" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.supermandelivery.Fonts.TextViewNormal
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/free_first_10kg"
                        android:textColor="@android:color/black" />

                    <com.supermandelivery.Fonts.TextViewNormal
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/plus_10kg"
                        android:textColor="@color/darkBlue" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_lighter"
                    android:padding="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:paddingTop="10dp">

                    <com.supermandelivery.Fonts.TextViewBold
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:text="@string/extra_assistance"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <com.supermandelivery.Fonts.TextViewBold
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/x2"
                        android:textColor="@color/darkBlue" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.supermandelivery.Fonts.TextViewNormal
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/additional_person"
                        android:textColor="@android:color/black" />

                    <com.supermandelivery.Fonts.TextViewNormal
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/delivery_charge"
                        android:textColor="@color/darkBlue" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_lighter"
                    android:padding="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:paddingTop="10dp">

                    <com.supermandelivery.Fonts.TextViewBold
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:text="@string/two_way"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <com.supermandelivery.Fonts.TextViewBold
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/x2"
                        android:textColor="@color/darkBlue" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp">

                    <com.supermandelivery.Fonts.TextViewNormal
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:text="@string/pickup_drop_return"
                        android:textColor="@android:color/black" />

                    <com.supermandelivery.Fonts.TextViewNormal
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/delivery_charge"
                        android:textColor="@color/darkBlue" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_lighter"
                    android:padding="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:paddingTop="10dp">

                    <com.supermandelivery.Fonts.TextViewBold
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:padding="2dp"
                        android:paddingTop="5dp"
                        android:text="@string/service_tax"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <com.supermandelivery.Fonts.TextViewNormal
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:padding="1dp"
                        android:paddingBottom="5dp"
                        android:text="@string/payable_in_addition"
                        android:textColor="@android:color/black" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
