<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <com.supermandelivery.Fonts.TextViewNormal
            android:id="@+id/prcl_track_id_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/track_id"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/tick_imgBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/white"
                android:src="@drawable/tick" />

            <com.supermandelivery.Fonts.TextViewNormal
                android:layout_width="1dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:background="@color/colorPrimary" />

            <ImageButton
                android:id="@+id/prcl_untick_imgBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@android:color/white"
                android:src="@drawable/untick" />

            <com.supermandelivery.Fonts.TextViewNormal
                android:layout_width="1dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:background="@color/colorPrimary" />

            <ImageButton
                android:id="@+id/prcl_untick2_imgBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@android:color/white"
                android:src="@drawable/untick" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.supermandelivery.Fonts.TextViewNormal
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:text="@string/req_rec2" />

            <com.supermandelivery.Fonts.TextViewNormal
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/time" />

            <com.supermandelivery.Fonts.TextViewNormal
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:text="@string/pickup_from_name" />

            <com.supermandelivery.Fonts.TextViewNormal
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="65dp"
                android:text="@string/deliver_to_set" />

        </LinearLayout>

    </LinearLayout>

    <com.supermandelivery.Fonts.ButtonViewNormal
        android:id="@+id/prcl_track_confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@drawable/button_pressed_blue"
        android:padding="5dp"
        android:text="@string/cancel_trip"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white" />

</LinearLayout>